tests/fixtures/errors/match_unknown_arm.z
# E0100: every arm of a sum subject must name a declared arm; an unknown arm
# is a type error rather than an undeclared C tag constant.
sig: variant { a: null  b: null }
main: function is {
    s: sig.a
    match (s) case a then print "a" case zzz then print "z" else print "e"
}
